New Projects added...

--- a/intro-project/css/style.css
+++ b/intro-project/css/style.css
@@ -11,6 +11,7 @@ a{
   margin-left: 10px;
   margin-right: 10px;
   color: #2b2839;
+  text-decoration: none;
 }
 
 h2{
@@ -51,6 +52,7 @@ h2{
   border: 0;
   border-radius: 5px;
   font-family: inherit;
+  cursor: pointer;
 }
 
 /* .input{
