--- a/basketball-scoreboard/style.css
+++ b/basketball-scoreboard/style.css
@@ -17,8 +17,8 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 100vh;             /* full viewport height */
-  margin: 0;                 /* remove default spacing */
+  height: 100vh;        
+  margin: 0;                 
 }
 
 p{
@@ -36,6 +36,12 @@ h3{
   margin-bottom: 0;
 }
 
+a {
+  text-decoration: none;
+  color: #9AABD8;
+  font-family: "Timer";
+}
+
 button{
   border: 1px solid #9AABD8;
   font-family: inherit;
@@ -45,6 +51,7 @@ button{
   background-color: #1B244A;
   border-radius: 3px;
   cursor: pointer;
+  margin-top: 10px;
 }
 
 #btnNew{
