--- a/hometown-project/css/style.css
+++ b/hometown-project/css/style.css
@@ -3,6 +3,20 @@ body{
   font-family: 'Montserrat', sans-serif;
 }
 
+a{
+  text-decoration: none;
+  color: #2b2839;
+}
+
+button{
+  padding: 5px 10px;
+  font-weight: bold;
+  font-family: inherit;
+  background-color: aqua;
+  border: 0;
+  border-radius: 5px;
+}
+
 .hero{
   height: 500px;
   background-image: url("../images/hero-image.jpg");
